made modal view films info

--- a/src/main.global.css
+++ b/src/main.global.css
@@ -152,21 +152,27 @@ body {
 }
 
 /* Card Animation */
-.card-enter {
+.card-enter,
+.modal-enter {
     opacity: 0;
     transform: scale(0);
 }
-.card-enter-active {
+.card-enter-active,
+.modal-enter-active {
     opacity: 1;
     transform: scale(1);
     transition: opacity 500ms, transform 500ms;
 }
-.card-exit {
+.card-exit,
+.modal-exit {
     opacity: 1;
     transform: scale(1);
 }
-.card-exit-active {
+.card-exit-active,
+.modal-exit-active {
     opacity: 0;
     transform: scale(0);
     transition: opacity 500ms, transform 500ms;
 }
+
+/* Modal animation */
