--- a/src/shared/Modal/ViewFilm/viewfilm.css
+++ b/src/shared/Modal/ViewFilm/viewfilm.css
@@ -1,6 +1,11 @@
 .about {
     display: flex;
     align-items: flex-start;
+    overflow-y: auto;
+    width: 1140px;
+    max-width: 80vw;
+    height: auto;
+    max-height: 60vh;
 }
 .about__view {
     width: 300px;
