--- a/src/shared/Modal/modal.css
+++ b/src/shared/Modal/modal.css
@@ -39,4 +39,9 @@
 }
 .modal__content {
     padding: 20px;
+    overflow-y: auto;
+    width: 1140px;
+    max-width: 80vw;
+    height: auto;
+    max-height: 60vh;
 }
