--- a/src/shared/Auth/AuthForm/authform.css
+++ b/src/shared/Auth/AuthForm/authform.css
@@ -10,6 +10,11 @@
     overflow: auto;
     border-radius: 10px;
 }
+@media all and (max-width: 568px) {
+    .authform {
+        max-width: 90vw;
+    }
+}
 .auth_wrapper {
     padding: 20px 15px;
 }
