--- a/src/shared/CardList/cardlist.css
+++ b/src/shared/CardList/cardlist.css
@@ -9,6 +9,7 @@
 
     padding: 80px 0 30px;
     min-height: 100vh;
+    z-index: 1;
 }
 .cardList__content {
     position: relative;
@@ -39,4 +40,11 @@
     box-sizing: border-box;
     font-size: 20px;
     line-height: 22px;
+}
+
+@media all and (max-width: 768px) {
+    .cardList__title {
+        font-size: 30px;
+        line-height: 35px;
+    }
 }
