--- a/src/shared/Header/header.css
+++ b/src/shared/Header/header.css
@@ -29,3 +29,82 @@
 .header__buttons button:first-of-type {
     margin: 0 10px 0 0;
 }
+
+@media all and (min-width: 769px) {
+    .header__burger {
+        display: none;
+    }
+}
+@media all and (max-width: 768px) {
+    .header__burger {
+        width: 30px;
+        height: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+    }
+    .header__burger span,
+    .header__burger span:first-child,
+    .header__burger span:last-child {
+        display: inline-block;
+        width: 60%;
+        border: 1px solid white;
+        transition: transform 0.3s ease;
+    }
+    .header__burger span:first-child,
+    .header__burger span:last-child {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 100%;
+    }
+    .header__burger span:first-child {
+        top: 0;
+    }
+    .header__burger span:last-child {
+        bottom: 0;
+    }
+
+    .header__buttons {
+        position: absolute;
+        top: 60px;
+        right: -100%;
+        transition: right 0.3s ease;
+        padding: 20px;
+        background: linear-gradient(
+            90deg,
+            rgba(18, 0, 36, 1) 14%,
+            rgba(117, 52, 195, 1) 100%,
+            rgba(98, 0, 255, 1) 100%
+        );
+        justify-content: flex-end;
+        border-radius: 0 0 10px 10px;
+    }
+    ._activeDrop {
+        right: 0;
+    }
+    .active span:nth-child(2) {
+        transform: scale(0);
+    }
+    .active span:first-child {
+        transform: rotate(45deg);
+        top: 10px;
+    }
+    .active span:last-child {
+        transform: rotate(-45deg);
+        bottom: 8px;
+    }
+
+    .header__wrapper input {
+        width: 70%;
+        margin: 0 10px;
+    }
+}
+@media all and (max-width: 576px) {
+    .header__logo {
+        font-size: 16px;
+        line-height: 18px;
+        text-align: center;
+    }
+}
