--- a/src/shared/Modal/ViewFilm/viewfilm.css
+++ b/src/shared/Modal/ViewFilm/viewfilm.css
@@ -70,3 +70,26 @@
 .about__content table td {
     padding: 10px;
 }
+
+@media all and (max-width: 992px) {
+    /* .about {
+        flex-direction: column;
+        align-items: center;
+    }
+    .about__view {
+        margin: 0 0 15px 0;
+    } */
+    .about__view {
+        flex: 0 0 250px;
+        width: 250px;
+    }
+}
+@media all and (max-width: 768px) {
+    .about {
+        flex-direction: column;
+        align-items: center;
+    }
+    .about__view {
+        margin: 0 0 10px 0;
+    }
+}
