--- a/src/shared/CardList/Card/card.css
+++ b/src/shared/CardList/Card/card.css
@@ -35,6 +35,12 @@
     height: 400px;
     border-radius: 10px;
     overflow: hidden;
+    background: linear-gradient(
+        90deg,
+        rgba(18, 0, 36, 1) 0%,
+        rgba(98, 0, 255, 1) 0%,
+        rgba(195, 145, 52, 1) 100%
+    );
 }
 .card__bg {
     position: absolute;
