made reset function

--- a/src/shared/Header/header.css
+++ b/src/shared/Header/header.css
@@ -26,7 +26,7 @@
 .header__buttons {
     display: flex;
 }
-.header__buttons button:first-of-type {
+.header__buttons button:not(:last-of-type) {
     margin: 0 10px 0 0;
 }
 
