--- a/src/shared/Modal/modal.css
+++ b/src/shared/Modal/modal.css
@@ -37,6 +37,10 @@
     width: 20px;
     display: inline-block;
 }
+.modal__close img {
+    max-width: 100%;
+    max-height: 100%;
+}
 .modal__content {
     padding: 20px;
     overflow-y: auto;
